# resource_tools

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  ERROR_HANDLING.md  README.md  TEST_COVERAGE.md
.github/workflows/: ci.yml  release.yml
cmake/: EmbedResources.cmake  resource_tools-config.cmake.in  resource_toolsConfig.cmake.in
cmake/templates/: embedded_data_unix.h.in  embedded_data_windows.h.in  resource_ids.h.in  resources.rc.in
include/resource_tools/: embedded_resource.h
test/: CMakeLists.txt  boundary_conditions_test.cpp  error_handling_test.cpp  resource_tools_test.cpp
test/data/: test file with spaces.txt  test_file.txt
test_installed/: CMakeLists.txt  InstallTest.cmake.in  README.md  main.cpp  sample.txt
test_installed/test_project/: CMakeLists.txt  main.cpp
